main/default/objects/CoveragesLineItem__c/CoveragesLineItem__c.object-meta.xml
<CustomObject>
    <label>Coverages Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000000}</displayFormat>
        <label>CLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverages Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>