main/default/objects/CoveragesLineItem__c/fields/Added_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Added_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added by Default</label>
    <type>Checkbox</type>
</CustomField>