main/default/objects/CoveragesLineItem__c/fields/Added_in_current_transaction__c.field-meta.xml
<CustomField>
    <fullName>Added_in_current_transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added in current transaction</label>
    <type>Checkbox</type>
</CustomField>