main/default/objects/CoveragesLineItem__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Coverage__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Main Coverage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Coverages Line Items (Coverage)</relationshipLabel>
    <relationshipName>CoverageQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>