main/default/objects/CoveragesLineItem__c/fields/Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code__c</fullName>
    <formula>Coverage__r.Coverage_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Code</label>
    <type>Text</type>
</CustomField>