main/default/objects/CoveragesLineItem__c/fields/Coverage_Premium__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Premium__c</fullName>
    <label>Coverage Premium</label>
    <length>25</length>
    <type>Text</type>
</CustomField>