main/default/objects/CoveragesLineItem__c/fields/Coverage_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Sort_Order__c</fullName>
    <formula>Coverage__r.Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>