main/default/objects/CoveragesLineItem__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main_Coverage</fullName>
                <label>Main Coverage</label>
            </value>
            <value>
                <fullName>Sub_Coverage</fullName>
                <label>Sub Coverage</label>
            </value>
            <value>
                <fullName>Limit</fullName>
            </value>
            <value>
                <fullName>Deductible</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>