main/default/objects/CoveragesLineItem__c/fields/CoverageLineItemType__c.field-meta.xml
<CustomField>
    <fullName>CoverageLineItemType__c</fullName>
    <formula>IF(AND(ISBLANK(Sub_Coverage__c),ISBLANK(Limits_Deductibles__c)) ,Coverage__r.RecordTypeName__c,
			IF(AND(NOT(ISBLANK(Sub_Coverage__c)),ISBLANK(Limits_Deductibles__c)) ,Sub_Coverage__r.RecordTypeName__c, Limits_Deductibles__r.RecordType.Name ) )</formula>
    <label>CoverageLineItemType</label>
    <type>Text</type>
</CustomField>