main/default/objects/CoveragesLineItem__c/fields/Deductible_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Frequency__c</fullName>
    <label>Deductible Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>