main/default/objects/CoveragesLineItem__c/fields/Default_Coverage_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Coverage_Value__c</fullName>
    <label>Default Coverage Value</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>