main/default/objects/CoveragesLineItem__c/fields/Dwelling_Home_Value__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Home_Value__c</fullName>
    <label>Dwelling/Home Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>