main/default/objects/CoveragesLineItem__c/fields/Endorsement_Categories__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Categories__c</fullName>
    <label>Endorsement Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restrict Premium Bearing</fullName>
            </value>
            <value>
                <fullName>Restrict Non-Premium Bearing</fullName>
            </value>
            <value>
                <fullName>Administrative Premium Bearing</fullName>
            </value>
            <value>
                <fullName>Administrative Non-Premium Bearing</fullName>
            </value>
            <value>
                <fullName>Broaden Premium Bearing</fullName>
            </value>
            <value>
                <fullName>Broaden Non-Premium Bearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>