main/default/objects/CoveragesLineItem__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>