main/default/objects/CoveragesLineItem__c/fields/Increment_Step__c.field-meta.xml
<CustomField>
    <fullName>Increment_Step__c</fullName>
    <label>Increment Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>