main/default/objects/CoveragesLineItem__c/fields/Is_Modified__c.field-meta.xml
<CustomField>
    <fullName>Is_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Modified</label>
    <type>Checkbox</type>
</CustomField>