main/default/objects/CoveragesLineItem__c/fields/IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>IsIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Included ?</label>
    <type>Checkbox</type>
</CustomField>