main/default/objects/CoveragesLineItem__c/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>The value used by the CLI of type Endorsement when added in the Quote</inlineHelpText>
    <label>IsSelected</label>
    <type>Checkbox</type>
</CustomField>