main/default/objects/CoveragesLineItem__c/fields/Limit_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Limit_Sort_Order__c</fullName>
    <formula>Limits_Deductibles__r.Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>