main/default/objects/CoveragesLineItem__c/fields/Limits_Deductibles__c.field-meta.xml
<CustomField>
    <fullName>Limits_Deductibles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limits &amp; Deductibles</label>
    <referenceTo>Coverage_Limits_Deductibles__c</referenceTo>
    <relationshipLabel>Coverages Line Items</relationshipLabel>
    <relationshipName>ProductQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>