main/default/objects/CoveragesLineItem__c/fields/Line_Item_Level__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Level__c</fullName>
    <formula>IF (
    AND(ISBLANK(Sub_Coverage__c),ISBLANK(Limits_Deductibles__c)) , &apos;1&apos;,
    IF(
         AND(NOT(ISBLANK(Sub_Coverage__c)),ISBLANK(Limits_Deductibles__c)), &apos;2&apos;, &apos;3&apos;
       
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Level</label>
    <type>Text</type>
</CustomField>