main/default/objects/CoveragesLineItem__c/fields/Max_amt__c.field-meta.xml
<CustomField>
    <fullName>Max_amt__c</fullName>
    <label>Max ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>