main/default/objects/CoveragesLineItem__c/fields/Min_amt__c.field-meta.xml
<CustomField>
    <fullName>Min_amt__c</fullName>
    <label>Min ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>