main/default/objects/CoveragesLineItem__c/fields/Non_Prorated_Coverage_Premium__c.field-meta.xml
<CustomField>
    <fullName>Non_Prorated_Coverage_Premium__c</fullName>
    <label>Non-Prorated Coverage Premium</label>
    <length>25</length>
    <type>Text</type>
</CustomField>