main/default/objects/CoveragesLineItem__c/fields/Option_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Option_Picklist__c</fullName>
    <label>Option Picklist</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>