main/default/objects/CoveragesLineItem__c/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <label>Option Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>