main/default/objects/CoveragesLineItem__c/fields/Option_Value_Default__c.field-meta.xml
<CustomField>
    <fullName>Option_Value_Default__c</fullName>
    <label>Option Value Default</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>