main/default/objects/CoveragesLineItem__c/fields/Optional_Factor_Label__c.field-meta.xml
<CustomField>
    <fullName>Optional_Factor_Label__c</fullName>
    <label>Optional Factor Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>