main/default/objects/CoveragesLineItem__c/fields/Options_Value_Percent__c.field-meta.xml
<CustomField>
    <fullName>Options_Value_Percent__c</fullName>
    <label>Option Percentage (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>