main/default/objects/CoveragesLineItem__c/fields/Override_Premium__c.field-meta.xml
<CustomField>
    <fullName>Override_Premium__c</fullName>
    <label>Override Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>