main/default/objects/CoveragesLineItem__c/fields/Parent_Coverages_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Coverages_Line_Item__c</fullName>
    <label>Parent Coverages Line Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>