main/default/objects/CoveragesLineItem__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>INCLUDES(Coverage__r.Additional_Requirements__c, &apos;Rating Required&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Checkbox</type>
</CustomField>