main/default/objects/CoveragesLineItem__c/fields/Sub_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Coverage</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selection must be a Sub Coverage Type</errorMessage>
        <filterItems>
            <field>Coverage__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Coverage</value>
        </filterItems>
        <filterItems>
            <field>Coverage__c.Coverage_or_Sub__c</field>
            <operation>equals</operation>
            <valueField>$Source.Coverage__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Sub Coverages Line Items</relationshipLabel>
    <relationshipName>SubCoveragesLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>