main/default/objects/CoveragesLineItem__c/fields/Technical_Premium__c.field-meta.xml
<CustomField>
    <fullName>Technical_Premium__c</fullName>
    <label>Technical Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>