main/default/objects/CoveragesLineItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(
	OR(AND(CoverageLineItemType__c =&quot;Main Coverage&quot;,ISPICKVAL(Coverage__r.Coverage_Type__c, &quot;Endorsement&quot;)),
		    AND(CoverageLineItemType__c =&quot;Sub Coverage&quot;,ISPICKVAL(Sub_Coverage__r.Coverage_Type__c, &quot;Endorsement&quot;)))
	,&quot;Endorsement Coverage&quot;,
	      IF(AND(
	  	        CONTAINS(CoverageLineItemType__c,&quot;Option&quot;), 
	  		    ISPICKVAL(Limits_Deductibles__r.Limit_Deductible_Type__c, &quot;Endorsement&quot;)) , &quot;Endorsement Option&quot;,&quot;Standard&quot;
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>