main/default/objects/CoveragesLineItem__c/recordTypes/Aqueous.recordType-meta.xml
<RecordType>
    <fullName>Aqueous</fullName>
    <active>true</active>
    <label>Aqueous</label>
</RecordType>