main/default/objects/CoveragesLineItem__c/recordTypes/Celerity.recordType-meta.xml
<RecordType>
    <fullName>Celerity</fullName>
    <active>true</active>
    <label>Celerity</label>
</RecordType>