main/default/objects/CoveragesLineItem__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Coverage__c</columns>
    <columns>Sub_Coverage__c</columns>
    <columns>Limits_Deductibles__c</columns>
    <columns>Coverage_Product__c</columns>
    <columns>CoverageLineItemType__c</columns>
    <columns>Type__c</columns>
    <columns>Page_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coverage_Product__c</field>
        <operation>equals</operation>
        <value>Cyber</value>
    </filters>
    <filters>
        <field>Coverage__c</field>
        <operation>contains</operation>
        <value>California</value>
    </filters>
    <filters>
        <field>CoverageLineItemType__c</field>
        <operation>equals</operation>
        <value>Main Coverage</value>
    </filters>
    <label>CelerityListView</label>
</ListView>